--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-25 05:13:59
+lastsearch = 2024-07-25 07:57:04
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -200.0%%
 title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tbu61Fe&sig=ACfU3U0ErcXksSoL8Ze1smw7DERLHoga0g&hl=en&sa=X&ved=2ahUKEwjEluXC2cCHAxXrDHkGHZsgATIQ6AF6BAgYEAM
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tbv6-Di&sig=ACfU3U2gkNgjtjB3n1xGR-aFT6oW19dPHg&hl=en&sa=X&ved=2ahUKEwiZz7f8_cCHAxU5pIkEHW_MCo4Q6AF6BAgXEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -5.9%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOoqSH20yoXQTAL9C7wpTZgssxS6W_luQjCS6p37yNvB7RPSUyB4I
 
 [www.kvaser.cn]
 match = -5.9%%
