--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-25 06:50:24
+lastsearch = 2024-07-25 08:05:23
 
 [www.instagram.com]
-match = -6.7%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -33.3%%
+title = Chan Paco Hoi Pak (@paco.chanhp)
+url = https://www.instagram.com/paco.chanhp/?hl=en
 
 [thewoksoflife.com]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Dr CHAN Hoi Huen
 url = https://www.eduhk.hk/ses/web_uat/staff_detail.php?id=60&name=chanhh
 
 [en.wikipedia.org]
-match = 6.7%%
-title = Cantonese profanity
-url = https://en.wikipedia.org/wiki/Cantonese_profanity
+match = 0.0%%
+title = Bong Joon-ho
+url = https://en.wikipedia.org/wiki/Bong_Joon-ho
 
 [www.soc.cuhk.edu.hk]
 match = 50.0%%
