--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-25 06:45:59
+lastsearch = 2024-07-25 07:59:15
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -273.3%%
+title = A little corner, located on the 4th floor of 215 Ly Tu Trong ...
+url = https://www.facebook.com/TartineSaigon/videos/-a-little-corner-located-on-the-4th-floor-of-215-ly-tu-trong-street-ideally-for-/534171968412166/
 
 [hoc247.vn]
 match = -213.3%%
