--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-25 03:48:37
+lastsearch = 2024-07-25 08:00:00
 
 [scholar.google.com]
 match = -43.8%%
@@ -557,9 +557,9 @@ title = Thứ trưởng Bộ KH&ĐT Trần Duy Đông được điều động g
 url = https://baotainguyenmoitruong.vn/thu-truong-bo-kh-dt-tran-duy-dong-duoc-dieu-dong-giu-chuc-vu-pho-bi-thu-tinh-uy-vinh-phuc-377200.html
 
 [audioclear.fr]
-match = -93.8%%
-title = Phim Việt Sex Cấm Chiếu Nam - Audio Clear
-url = https://audioclear.fr/3854901-chiếu-cấm-việt-sex-phim-nam.html
+match = -112.5%%
+title = Ti Gái Live Bigo Khoe Xinh - Audio Clear
+url = https://audioclear.fr/4003778-khoe-bigo-live-xinh-ti-gái.html
 
 [aliasdebarras.fr]
 match = -31.2%%
@@ -575,4 +575,9 @@ url = https://baochinhphu.vn/chu-tich-nuoc-to-lam-tham-trung-tam-dieu-duong-thuo
 match = -181.2%%
 title = This review was produced by SmartAsset - Las Vegas ...
 url = https://monchantierbois.fr/68058816-phim-heo-mai-la-si-a.html
+
+[bikersemporiumsa.co.za]
+match = -12.5%%
+title = Tranh: đam Mỹ Truyện 18+
+url = https://bikersemporiumsa.co.za/96144390-truyên-18-đammy.html
 
