--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-25 06:31:48
+lastsearch = 2024-07-25 08:02:59
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw9zwno&sig=ACfU3U0Icq1kGHNMWSLV7nse9X3FEyA7KQ&hl=en&sa=X&ved=2ahUKEwjpmuf06sCHAxVWBdAFHdlCDpoQ6AF6BAg_EAM
+match = -142.9%%
+title = A critical pronouncing dictionary. With a suppl., by E. Smith
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkkaNzaP&sig=ACfU3U3Z1f--wD3Fh-mYYssKV4tsPedTVw&hl=en&sa=X&ved=2ahUKEwiR4_2l_8CHAxXRkYkEHavYDWkQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -142,9 +142,9 @@ title = Chapter 1 INVENTORY
 url = https://www.scottsdaleaz.gov/Assets/ScottsdaleAZ/Airport/NEMReport_Chapter1.pdf
 
 [www.aemo.com.au]
-match = -90.5%%
-title = Load Shedding in Victoria on 24 and 25 January 2019
-url = https://www.aemo.com.au/-/media/Files/Electricity/NEM/Market_Notices_and_Events/Power_System_Incident_Reports/2019/Load-Shedding-in-VIC-on-24-and-25-January-2019.pdf
+match = -104.8%%
+title = EMMS Technical Specification – 5MS - Dispatch and ...
+url = https://www.aemo.com.au/-/media/files/electricity/nem/5ms/systems-workstream/2020/emms-technical-specification---dispatch-and-operations-v6.pdf
 
 [www.consilium.europa.eu]
 match = -114.3%%
