--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-25 04:31:38
+lastsearch = 2024-07-25 08:02:39
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Oc Lounge and Garden Euro
-url = https://www.tiktok.com/discover/oc-lounge-and-garden-euro
+match = -20.0%%
+title = Colombians Riot Hard Rock Cafe
+url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Ethereum Tokens
 url = https://cryptoslate.com/blockchain/ethereum/
 
 [30rates.com]
-match = -60.0%%
-title = USD TO ZAR TODAY AND FORECAST TOMORROW ...
-url = https://30rates.com/usd-to-zar-today-forecast-dollar-to-rand
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -140.0%%
-title = Trump Selects Bitcoin-Owning Ohio Sen. JD Vance as Vice ...
-url = https://cryptonews.com/news/trump-selects-bitcoin-owning-ohio-sen-jd-vance-as-vice-presidential-candidate.htm
+match = -120.0%%
+title = Argentina OKs Registration of Company Using BTC as ...
+url = https://cryptonews.com/news/argentina-national-first-regulator-approves-registration-of-company-with-btc-usdc-capital.htm
 
 [www.thespike.gg]
 match = -140.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=6dff3b47ea39d1e5&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj58taHu72HAxUjADQIHXEuA3EQsZYEegQIThAC
+url = https://www.google.com/search?sca_esv=d8b6740b587384a7&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiEjquc_8CHAxVRv4kEHRgRAREQsZYEegQIUBAC
 
 [www.outlookindia.com]
 match = -170.0%%
