--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-25 05:16:33
+lastsearch = 2024-07-25 08:05:34
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -29.4%%
-title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
+match = -41.2%%
+title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -130,4 +130,9 @@ url = https://www.nrc.gov/docs/ML1720/ML17207A670.pdf
 match = -52.9%%
 title = Thảm xốp lót sàn nhà bóng cho bé chơi
 url = http://tayphuthuan.com/san-pham/tham-xop-lot-san-nha-778.html
+
+[finance.yahoo.com]
+match = 0.0%%
+title = 
+url = https://finance.yahoo.com/quote/XOP/holdings/
 
