--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-25 05:32:45
+lastsearch = 2024-07-25 08:01:47
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,19 +17,19 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -140.0%%
-title = Mua Đệm lò xo Tuấn Anh chính hãng, giá rẻ, miễn phí vận ...
-url = https://demxanh.com/dem-lo-xo-tuan-anh.html
+match = -100.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY MASTERY
-url = https://tuananh.vn/lo-xo-tui-ruby-mastery-p444.html
+title = LÒ XO TÚI RUBY POTENCY
+url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
-match = -35.0%%
-title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
-url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
+match = 20.0%%
+title = Đệm Lò Xo Tuấn Anh Raina
+url = https://dem24h.vn/dem-lo-xo-tui-raina-korea
 
 [demviethome.vn]
 match = -140.0%%
@@ -62,9 +62,9 @@ title = Explicit poets [V0y26d]
 url = https://www.middlesex.mass.edu/templateinframes/?Site=Help&Url=https://xn--80aboyjk.xn--p1ai/njhwzet7vah4m01-173333ytcomamafe85
 
 [demtot.com]
-match = 20.0%%
-title = Đệm lò xo Tuấn Anh TRACY
-url = https://demtot.com/dem-lo-xo-tuan-anh-tracy/
+match = -15.0%%
+title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
+url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
 
 [www.instagram.com]
 match = -95.0%%
