--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-25 05:49:47
+lastsearch = 2024-07-25 09:06:54
 
 [vinatools.com]
 match = -140.0%%
@@ -47,8 +47,8 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
+match = -53.3%%
+title = Black Kingdom - D2 - Facebook
 url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [banhang.shopee.vn]
